@@ -6,6 +6,7 @@ Version 5.9.20
 - Fixed 64 bit integer preincrement
 - Fixed initializing local reference variables
 - More fixes to C struct initialization
+- Remove unused methods even at -O0 optimization
 
 Version 5.9.19
 - Added a warning for mixing tabs and spaces in Spin code
